src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ExclusionRelatedDetails__c</fullName>
        <label>ExclusionRelatedDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Category_Cost_Price__c</fullName>
        <label>Expected Category Cost Price</label>
        <summarizedField>APTS_AgreementTotalVolumeObligation__c.APTS_Total_Expected_Cost_Amount__c</summarizedField>
        <summaryForeignKey>APTS_AgreementTotalVolumeObligation__c.APTS_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Category_Discount_Amount__c</fullName>
        <label>Expected Category Discount Amount</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Expected_Category_Discount_Amount__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Product_Discount_Amount__c</fullName>
        <description>Summary roll up of the Total Expected Discount Amount (VOA object) where type = Product</description>
        <label>Expected Product Discount Amount</label>
        <summarizedField>APTS_AgreementTotalVolumeObligation__c.APTS_Total_Expected_Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>APTS_AgreementTotalVolumeObligation__c.APTS_Type__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_AgreementTotalVolumeObligation__c.APTS_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Volume_Assumption_Value__c</fullName>
        <label>Expected Volume Assumption Value</label>
        <summarizedField>APTS_AgreementTotalVolumeObligation__c.APTS_Total_Estimated_Contract_Value__c</summarizedField>
        <summaryForeignKey>APTS_AgreementTotalVolumeObligation__c.APTS_Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Frequency__c</fullName>
        <label>Fixed Term Settlement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                    <default>true</default>
                    <label>Yearly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Settlement_Freq_Trans__c</fullName>
        <label>Fixed Term Settlement Freq Trans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Startdate_Date__c</fullName>
        <defaultValue>Date(1990,1,1)</defaultValue>
        <label>Fixed Term Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Startdate__c</fullName>
        <defaultValue>Date(1990,1,1)</defaultValue>
        <label>Fixed Term Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Term_Type__c</fullName>
        <description>Type of fixed term</description>
        <label>Fixed Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Cost</fullName>
                </value>
                <value>
                    <fullName>All Ingredients</fullName>
                </value>
                <value>
                    <fullName>Fixed Costs and Ingredients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Free_On_Loan_List_Price_Rollup__c</fullName>
        <label>Free on Loan List Price Rollup</label>
        <summarizedField>Apttus__AgreementLineItem__c.Apttus__ListPrice__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Type_of_Contract__c</field>
            <operation>equals</operation>
            <value>Free on Loan</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Front_Page_Image__c</fullName>
        <description>For Front Page image on Template</description>
        <label>Front Page Image</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Health &amp; Care B</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Care A</fullName>
                </value>
                <value>
                    <fullName>Co-workers</fullName>
                </value>
                <value>
                    <fullName>Cappuccino</fullName>
                </value>
                <value>
                    <fullName>Dutch originals</fullName>
                </value>
                <value>
                    <fullName>Horeca Pickwick Tea</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>PDO</fullName>
                </value>
                <value>
                    <fullName>Laurentis</fullName>
                </value>
                <value>
                    <fullName>Themepark</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Shops</fullName>
                </value>
                <value>
                    <fullName>Gevalia</fullName>
                </value>
                <value>
                    <fullName>Nordic Roast</fullName>
                </value>
                <value>
                    <fullName>Cafax</fullName>
                </value>
                <value>
                    <fullName>Kenco</fullName>
                </value>
                <value>
                    <fullName>L&apos;Or</fullName>
                </value>
                <value>
                    <fullName>Friele</fullName>
                </value>
                <value>
                    <fullName>Krone</fullName>
                </value>
                <value>
                    <fullName>House of Coffee</fullName>
                </value>
                <value>
                    <fullName>Marcilla</fullName>
                </value>
                <value>
                    <fullName>Saimaza</fullName>
                </value>
                <value>
                    <fullName>Soley</fullName>
                </value>
                <value>
                    <fullName>Jacobs</fullName>
                </value>
                <value>
                    <fullName>HAG</fullName>
                </value>
                <value>
                    <fullName>Splendid</fullName>
                </value>
                <value>
                    <fullName>Café Noir</fullName>
                </value>
                <value>
                    <fullName>Karat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_FullOperatingRollup__c</fullName>
        <label>Full Operating Cost Rollup</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Full_Operating_Cost_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>FULL</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>contains</operation>
            <value>OPERATING</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Option_Product_Name__c</field>
            <operation>notContain</operation>
            <value>CO</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Function__c</fullName>
        <formula>Text(APTS_Autorized_Signature_Customer__r.Function__c)</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_Calculation_Model__c</fullName>
        <formula>Apttus__Account_Search_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Calculation Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_Supporting_Document__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;), ISPICKVAL(Apttus__Status__c,&quot;Author Contract&quot;) ,ISPICKVAL(Apttus__Status__c,&quot;In Review&quot;),ISPICKVAL(Apttus__Status__c,&quot;Internal Signatures&quot;),ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;),ISPICKVAL(Apttus__Status__c,&quot;Activated&quot;),ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;),ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generate__c</fullName>
        <formula>IF(
ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;),
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),
 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Grand_Parent_Contract__c</fullName>
        <description>Agreement Number of Grand Parent Account&apos;s Agreement</description>
        <label>Grand Parent Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GrossSalesValue__c</fullName>
        <formula>IF(APTS_Net_List_Price_Total__c!=0 &amp;&amp; APTS_Expected_Volume_Assumption_Value__c!=0 , APTS_Net_List_Price_Total__c  +  APTS_Expected_Volume_Assumption_Value__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Margin__c</fullName>
        <formula>IF(APTS_NetSalesValue__c!=0 &amp;&amp; APTS_CostPrice__c!=0,APTS_NetSalesValue__c - APTS_CostPrice__c,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Profit__c</fullName>
        <formula>APTS_Gross_Margin__c  -  APTS_Out_of_Home_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Sales_Value__c</fullName>
        <label>Gross Sales Value</label>
        <summarizedField>Apttus__AgreementLineItem__c.Apttus__ExtendedPrice__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Pricing_Conditions__c</fullName>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),ISPICKVAL(Apttus__Status__c,&quot;Activated&quot;)), HYPERLINK(&quot;/apex/APTS_AgreementHierarchyView?id=&quot;&amp;Id, &quot;View&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Pricing Conditions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Import_Offline_Document__c</fullName>
        <formula>IF (OR
	(ISPICKVAL(Apttus__Status__c,&quot;Request&quot;), 
	ISPICKVAL(Apttus__Status__c,&quot;Request Approval&quot;) ,
	ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Submitted Request&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Rejected Request&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Fully Signed&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Activated&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Review&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Review&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Terminated&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Superseded&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)),
HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IncentivesRelatedDetails__c</fullName>
        <label>IncentivesRelatedDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Include_First_Line_Response_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include First Line Response Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Includes_RentBuy_machine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes RentBuy Machine?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IndexationRelatedListDetails__c</fullName>
        <label>IndexationRelatedListDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Cycle_Start_Trans__c</fullName>
        <label>Ingredient Bill Cycle Start Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Day_Of_Month_Trans__c</fullName>
        <label>Ingredient Bill Day Of Month Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Interval_Translated__c</fullName>
        <label>Ingredient Billing Interval Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Initiate_CMR_DMR__c</fullName>
        <formula>IF (OR( 
	ISPICKVAL(Apttus__Status__c,&quot;Request Approval&quot;), 
	ISPICKVAL(Apttus__Status__c,&quot;Approved Request&quot;),
	ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Rejected&quot;) ,
	ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;),
	ISPICKVAL(Apttus__Status__c,&apos;Fully Signed&apos;),
	ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;),
	ISPICKVAL(Apttus__Status__c,&apos;Activated&apos;),
	ISPICKVAL(Apttus__Status__c,&quot;Other Party Review&quot;),
	ISPICKVAL(Apttus__Status__c,&quot;Internal Review&quot;)),
HYPERLINK(&quot;/apex/APTS_InitiateCMRDMR?id=&quot; &amp;Id, IMAGE(&quot;/resource/Initiate_CMR_DMR&quot;, &quot;Initiate&quot;),&quot;_self&quot;),
 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate CMR/DMR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_cost__c</fullName>
        <formula>APTS_Line_item_Cost_Price_Machine__c  / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Admin_Order_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin Order Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Amended_for_Indexation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Amended for Indexation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Billing_Setting_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox will be checked once on of the billing setting has been changed.</description>
        <label>Is Billing Setting Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JDE Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (JDE Company)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JDE Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_KPISLA_RelatedList_Details__c</fullName>
        <label>KPI/SLA RelatedList Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Language1__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_SV</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>SAP_EN</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>SAP_NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>SAP_FR</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>SAP_NO</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>SAP_DA</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>SAP_SR</fullName>
                    <label>Serbian</label>
                </value>
                <value>
                    <fullName>SAP_ZH</fullName>
                    <label>Chinese</label>
                </value>
                <value>
                    <fullName>SAP_TH</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>SAP_KO</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>SAP_RO</fullName>
                    <label>Romanian</label>
                </value>
                <value>
                    <fullName>SAP_SL</fullName>
                    <label>Slovenian</label>
                </value>
                <value>
                    <fullName>SAP_HR</fullName>
                    <label>Croatian</label>
                </value>
                <value>
                    <fullName>SAP_MS</fullName>
                    <label>Malaysian</label>
                </value>
                <value>
                    <fullName>SAP_UK</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>SAP_ET</fullName>
                    <label>Estonian</label>
                </value>
                <value>
                    <fullName>SAP_AR</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>SAP_HE</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>SAP_CS</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>SAP_DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>SAP_EL</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>SAP_HU</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>SAP_IT</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>SAP_JA</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>SAP_PL</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>SAP_ZF</fullName>
                    <label>Chinese trad</label>
                </value>
                <value>
                    <fullName>SAP_PT</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>SAP_SK</fullName>
                    <label>Slovakian</label>
                </value>
                <value>
                    <fullName>SAP_RU</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>SAP_ES</fullName>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Legal_Entity_JDE__c</fullName>
        <formula>IF(Apttus__Account__r.RecordType.Name  = &apos;JDE Company&apos;, Apttus__Account__r.Name ,&apos;&apos;)</formula>
        <label>Legal Entity JDE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_item_Cost_Price_Machine__c</fullName>
        <label>Line item Cost Price (Machine)</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Extended_Cost_2_decimals__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_MachineCoffeeKitchen__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Is_Not_Rollup_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Line_item_Cost_Price__c</fullName>
        <label>Line item Cost Price (excl. services)</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Extended_Cost_2_decimals__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Is_Not_Rollup_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_CMConfig__ChargeType__c</field>
            <operation>notEqual</operation>
            <value>Service Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.Apttus_CMConfig__ChargeType__c</field>
            <operation>notEqual</operation>
            <value>Additional Service Fee</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Ingredient_Standalone__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Line_item_Net_Adjustment_Amount__c</fullName>
        <label>Line item Net Adjustment Amount</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Net_Adjustment_Amount_2_decimals__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Is_Not_Rollup_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__AccountLocation__c.Apttus_Config2__AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Apttus__Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreements (Ship to Party)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Lock_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Lock_Status__c</fullName>
        <formula>IF( APTS_Lock_Agreement__c = true , IMAGE(&quot;/resource/APTS_CreateVolumeObligations&quot;, &quot;Lock Agreement&quot;),&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Lock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Bill_Day_Of_Month_Trans__c</fullName>
        <label>Machine Billing Day Of Month Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Billing_Cycle_Start_Trans__c</fullName>
        <label>Machine Billing Cycle Start Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Billing_Interval_Translated__c</fullName>
        <label>Machine Billing Interval Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Make_Primary__c</fullName>
        <formula>IF ( 
AND( 
LEN( Apttus__Related_Opportunity__c )&gt; 0, 
NOT(APTS_Primary__c) 
), 
HYPERLINK(&quot;/apex/APTS_MakePrimary?id=&quot;&amp;Id, IMAGE(&quot;/resource/AgreementMakePrimary&quot;, &quot;Make Primary&quot;),&quot;_self&quot;), 
NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Manager_L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager L2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager L1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Master_Caterer_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Master Caterer Agreement)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Migration_Date__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_NSV__c</fullName>
        <label>NSV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NetSalesValue__c</fullName>
        <formula>APTS_GrossSalesValue__c - APTS_Trade_Spend__c</formula>
        <label>Net Sales Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_List_Price_Total__c</fullName>
        <label>Net List Price Total</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Base_Extended_Price_2_decimals__c</summarizedField>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Is_Not_Rollup_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus__AgreementLineItem__c.APTS_Ingredient_Standalone__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Sales_Value__c</fullName>
        <label>Net Sales Value</label>
        <summarizedField>Apttus__AgreementLineItem__c.Apttus__NetPrice__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Contract_Rent_Buy__c</fullName>
        <formula>IF(APTS_RentBuy_Contract__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non – Standard Deal (Contract: Rent Buy)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_Billing_Arrears__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non – Standard Deal (Billing Arrears)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_Budget__c</fullName>
        <formula>IF(APTS_Count_of_Budgets__c  &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non – Standard Deal (Budget)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_Fixed_End_Date__c</fullName>
        <formula>IF( ISPICKVAL(  Apttus__Subtype__c , &apos;Fixed end date&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non – Standard Deal (Fixed End Date)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_Fixed_Term__c</fullName>
        <formula>IF(  ISBLANK( TEXT(APTS_Fixed_Term_Type__c) )  , false , true)</formula>
        <label>Non – Standard Deal (Fixed Term)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_Indexation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non – Standard Deal (Indexation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_KPI_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non – Standard Deal (KPI/SLA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Standard_Deal_One_time_bonus__c</fullName>
        <formula>IF(NOT(ISBLANK(APTS_One_Time_Bonus__c)),true,false)</formula>
        <label>Non – Standard Deal (One time bonus)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>